2004-09-30  tag aolserver_v40_r9_b2

2004-09-30  Dossy Shiobara <dossy@panoptic.com>

	* include/ns.h (1.55.2.13): BUMP: 4.0.9b

2004-09-30  Dossy Shiobara <dossy@panoptic.com>

	* include/ns.h (1.55.2.12), nsd/tclhttp.c (1.16.2.5),
	  nsd/sockcallback.c (1.12.2.2): Implement
	  Ns_SockCancelCallbackEx() in order to correctly cancel actions in
	  the SockCallbackThread.  Fix for SF Bug #1037196.  Backported
	  from HEAD for 4.0.9.

2004-09-29  Dossy Shiobara <dossy@panoptic.com>

	* include/ns.h (1.55.2.11), nsd/tclhttp.c (1.16.2.4),
	  nsd/sockcallback.c (1.12.2.1): Fix a thread hang issue when
	  ns_http fails but HttpCancel() never executes because poll()
	  returns revent == POLLPRI.  Closes SF Bug #1037196.  Backported
	  from HEAD for 4.0.9.

2004-09-24  Dossy Shiobara <dossy@panoptic.com>

	* include/nsthread.h (1.24.2.2): Win32 supports the
	  get{addr,name}info() API, so use it.	Backported from HEAD for
	  4.0.9.

2004-09-24  Dossy Shiobara <dossy@panoptic.com>

	* nsd/dns.c (1.7.2.3): Small memory leak introduced on platforms w/
	  getaddrinfo.	Closes SF Bug #1033575.  Backport from HEAD for
	  4.0.9.

2004-09-22  Dossy Shiobara <dossy@panoptic.com>

	* configure (1.15.2.6), configure.in (1.13.2.4): get{addr,name}info
	  on Solaris 9 is in -lsocket.	Backported from HEAD.

2004-09-21  Dossy Shiobara <dossy@panoptic.com>

	* configure (1.15.2.5), configure.in (1.13.2.3): Ensure we use the
	  compiler from the Tcl build during AOLserver configure process,
	  unless it's explicitly overrided during the AOLserver build.
	  Backported from HEAD for 4.0.9.

2004-09-21  Dossy Shiobara <dossy@panoptic.com>

	* aclocal.m4 (1.1.4.3): Make detection of gethostby{addr,name}_r
	  more robust.	Closes SF Bug #1032231.  Backported from HEAD for
	  4.0.9.

2004-09-20  Dossy Shiobara <dossy@panoptic.com>

	* nsd/: nsmain.c (1.52.2.2), nsd.h (1.77.2.7), unix.c (1.15.2.5):
	  Need to set the dumpable flag on Linux in order to get a core